TL-16186 theme: fixed contrast error with flex icons in the current learning block
Reviewed-on: https://review.totaralms.com/17355
Tested-by: Jenkins Automation <jenkins@totaralms.com>

--- a/blocks/current_learning/less/roots.less
+++ b/blocks/current_learning/less/roots.less
@@ -85,9 +85,6 @@
             > .ft-certificate {
                 font-size: 18px;
             }
-            .label.label-danger .flex-icon {
-                color: @bg-default;
-            }
 
             h3 {
                 display: inline-block;
