--- a/theme/roots/less/totara/core.less
+++ b/theme/roots/less/totara/core.less
@@ -1876,3 +1876,10 @@ body.behat-site {
         display: none;
     }
 }
+
+.label .flex-icon {
+    /* stylelint-disable declaration-no-important */
+    // This is to overwrite the colour important on various icons - that can cause contrast issues
+    color: inherit !important;
+    /* stylelint-enable declaration-no-important */
+}
